2015-11-22  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 37188: Test/B09hash.ztst: new test.

	* 37187: Src/builtin.c: infinite loop in "hash -m".

	* 37186: Functions/VCS_Info/VCS_INFO_nvcsformats,
	Src/Zle/zle_main.c: a couple of WARN_CREATE_GLOBAL fixes.

2015-11-21  Barton E. Schaefer  <schaefer@zsh.org>

	* 37181: Test/C02cond.ztst, Test/D07multibyte.ztst,
	Test/V01zmodload.ztst, Test/V02zregexparse.ztst,
	Test/V03mathfunc.ztst, Test/V04features.ztst, Test/V05styles.ztst,
	Test/V09datetime.ztst, Test/V10private.ztst, Test/X02zlevi.ztst,
	Test/Y01completion.ztst, Test/Y02compmatch.ztst,
	Test/Y03arguments.ztst, Test/comptest, Test/ztst.zsh: consistent
	use of zmodload and corresponding ZTST_unimplemented or ZTST_skip

2015-11-21  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk, Etc/FAQ.yo, README: make
	5.1.1-test-1 in preparation for 5.2.

2015-11-20  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/mod_paramter.yo: document order of entries
	for $history and $historywords

2015-11-20  Mikael Magnusson  <mikachu@gmail.com>

	* 37161: Src/init.c: Disable the heuristic setting RPROMPT_INDENT
	to 0

2015-11-20  Peter Stephenson  <p.stephenson@samsung.com>

	* 37170: Functions/Zle/smart-insert-last-word: suppress
	WARN_CREATE_GLOBAL for intentional creation of global variables.

	* 37168: Src/params.c: no WARN_CREATE_GLOBAL on special parameters.

	* 20974: Src/builtin.c, Test/D04parameter.ztst: fix bug
	when scalar value assigned to special array in typeset.

2015-11-20  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37164: Completion/Unix/Command/_tmux: _tmux: Complete external
	commands

	* 37149: Completion/Unix/Command/_git: _git: Complete
	'bisect/bad' ref

2015-11-19  Peter Stephenson  <p.stephenson@samsung.com>

	* 37159: NEWS, README: update for next version.

	* unposted: Doc/Zsh/params.yo: describe separators between
	values in array assignment.

2015-11-18  Barton E. Schaefer  <schaefer@zsh.org>
